# ecommerce_backend

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements-prod.txt  requirements.txt
.github/: project-board.yml
.github/instructions/: containerization-docker-best-practices.instructions.md
.github/workflows/: cd.yml  ci.yml  enforce-pr-source.yml
apps/catalog/: models.py  paginations.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/catalog/management/commands/: seed_category_product_db.py
apps/catalog/migrations/: 0001_initial.py  0002_product_image.py
apps/catalog/tests/test_category/test_views/: test_category_bulk_upload.py  test_category_download_errors.py  test_category_view_set.py
apps/catalog/tests/test_product/test_views/: test_filter_product_by_category.py  test_product_images.py  test_product_pagination.py  test_product_search_by_name.py  test_product_view_set.py  test_sort_product.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/management/commands/: seed_users_db.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_id.py
apps/users/tests/: test_user_auth.py
apps/users/tests/test_views/: test_register_user_view.py  test_user_view_set.py
core/: urls.py  views.py
core/settings/: __init__.py  base.py  development.py  logging.py  production.py  staging.py  testing.py
core/templates/core/: landing_page.html
docs/: ref_doc.md  user_stories.md  wiki_doc.md
nginx/: README.md  nginx.conf  proxy_params
scripts/: setup-vps.sh  wait-for-db.sh
scripts/hooks/: pre-commit  pre-push
tests/: README.md  constants.py
tests/e2e/: test_landing_page.py
